--- a/K8S/deployment.yaml
+++ b/K8S/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: todo-example
     spec:
       containers:
-      - image: dockerhub9876/todo
+      - image: public.ecr.aws/w1u8s8d4/my-eks-demo
         name: todo-example
         ports:
         - containerPort: 8080
