--- a/dep.yaml
+++ b/dep.yaml
@@ -5,7 +5,7 @@ metadata:
     app: todo-example
   name: todo-example
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: todo-example
@@ -15,7 +15,7 @@ spec:
         app: todo-example
     spec:
       containers:
-      - image: public.ecr.aws/w1u8s8d4/my-eks-demo
+      - image: public.ecr.aws/w1u8s8d4/my-eks-demo:latest
         name: todo-example
         ports:
         - containerPort: 8080
